tests/Rule/data/debug/zero.php
<?php

namespace DebugZero;

class Foo
{
    public function __construct() // error: Unused DebugZero\Foo::__construct
    {
    }
}
